maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: ')' expected but '}' found.
}
^JediEscaper:64: error: ':' expected but ',' found.
def indiqueLeReste(x,y):Unit={
                    ^JediEscaper:112: error: identifier expected but '}' found.
}
^